--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- banner -->
-    <div class="jumbotron jumbotron-fluid" id="banner" style="background-image: url(img/banner-bk.jpg);">
+    <div class="jumbotron jumbotron-fluid" id="banner" style="background-image: linear-gradient(rgba(200, 200, 200, 0.5), rgba(212, 175, 55, 0.5));">
         <div class="container text-center text-md-left">
             <header>
                 <div class="row justify-content-between">
@@ -31,43 +31,43 @@
                     </div>
                 </div>
             </header>
-            <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5">
+            <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 font-weight-bold my-5">
             	Coupoint<br>
             </h1>
-            <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
+            <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
                 Coupoint helps businesses better connect with their customers.
-                <br> Try now to unlock more sales potential and customer loyalty.
+                <br> Try now to unlock more sales and customer satisfaction!
             </p>
             <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
-                class="btn my-4 font-weight-bold atlas-cta cta-green">Download Play Store</a>
+                class="btn my-4 font-weight-bold atlas-cta cta-gold">Download Play Store</a>
             <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
-                class="btn my-4 font-weight-bold atlas-cta cta-green">Downlaod App Store</a>
+                class="btn my-4 font-weight-bold atlas-cta cta-gold">Downlaod App Store</a>
             <br>
-            <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
+            <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
                 Not ready to download?
             </p>
             <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
-                class="btn my-4 font-weight-bold atlas-cta cta-green">Try on the Web</a>
+                class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
         </div>
     </div>
     <!-- three-blcok -->
     <div class="container my-5 py-2">
-        <h2 class="text-center font-weight-bold my-5">Smartest protection for your site</h2>
+        <h2 class="text-center font-weight-bold my-5">At a Glance</h2>
         <div class="row">
+            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
+                <img src="img/smart-protect-2.jpg" alt="Redeem" class="mx-auto">
+                <h4>Customize</h4>
+                <p>Customize your business reward</p>
+            </div>
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/smart-protect-1.jpg" alt="Anti-spam" class="mx-auto">
-                <h4>Anti-spam</h4>
-                <p>Lorem ipsum dolor sit amet porro his no his deleniti</p>
+                <img src="img/smart-protect-1.jpg" alt="Generate" class="mx-auto">
+                <h4>Generate</h4>
+                <p>Your business generates a stamp or reward</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/smart-protect-2.jpg" alt="Phishing Detect" class="mx-auto">
-                <h4>Phishing Detect</h4>
-                <p>Ne error antiopam usu. Sed vocen concludaturque ea</p>
-            </div>
-            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
-                <h4>Smart Scan</h4>
-                <p>Et usu ocurreret elaboraret doctus prodesse assueverit.</p>
+                <img src="img/smart-protect-3.jpg" alt="Scan" class="mx-auto">
+                <h4>Scan</h4>
+                <p>Your customer scans the QR code to get the stamp or redeem the reward</p>
             </div>
         </div>
     </div>
@@ -76,13 +76,13 @@
         <div class="container my-5">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
-                    <h2 class="font-weight-bold">Take a look inside</h2>
-                    <p class="my-4">Te iisque labitur eos, nec sale argumentum scribentur no,
-                        <br> augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.</p>
-                    <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
+                    <h2 class="font-weight-bold">Easy to onboard</h2>
+                    <p class="my-4">No account? No app? No problem.
+                        <br> Your customers can still scan your store's stamps without having neither an account nor an app.</p>
+                    <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
-                    <img src="img/feature-1.png" alt="Take a look inside" class="mx-auto d-block">
+                    <img src="img/feature-1.png" alt="Easy to onboard" class="mx-auto d-block">
                 </div>
             </div>
         </div>
@@ -92,24 +92,36 @@
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
-                    <h2 class="font-weight-bold">Safe and reliable</h2>
+                    <h2 class="font-weight-bold">Insightful metrics</h2>
                     <p class="my-4">
-                        Duo suas detracto maiestatis ad, commodo lucilius invenire nec ad,
-                        <br> eum et oratio disputationi. Falli lobortis his ad
+                        Coupoint keeps track of how your store's loyalty reward program is doing.
+                        <br> Take advantage of the aggregated metrics on the time period of your choice.
                     </p>
-                    <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center flex-md-first">
-                    <img src="img/feature-2.png" alt="Safe and reliable" class="mx-auto d-block">
+                    <img src="img/feature-2.png" alt="Insightful metrics" class="mx-auto d-block">
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- demo video -->
+    <div class="container my-5 py-2" id="demo-video">
+        <h2 class="text-center font-weight-bold d-block mb-3">Demo</h2>
+        <div class="row text-center">
+            <div class="col-md-12">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/0NMSWCcy77s" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+
     <!-- price table -->
-    <div class="container my-5 py-2" id="price-table">
-        <h2 class="text-center font-weight-bold d-block mb-3">Check our pricing</h2>
-        <div class="row">
+    <div class="container my-5 py-2" id="price-table" style="display: none;">
+        <h2 class="text-center font-weight-bold d-block mb-3">Pricing</h2>
+        <div class="row">            
             <div data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5">
                 <h4 class="my-4">STARTUP</h4>
                 <p class="font-weight-bold">$ <span class="display-2 font-weight-bold">0</span> / MO.</p>
@@ -146,7 +158,7 @@
         </div>
     </div>
     <!-- client -->
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid" style="display: none;">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-md-2 py-2 align-self-center">
@@ -171,22 +183,21 @@
         </div>
     </div>
     <!-- contact -->
-    <div class="jumbotron jumbotron-fluid" id="contact" style="background-image: url(img/contact-bk.jpg);">
+    <div class="jumbotron jumbotron-fluid" id="contact" style="background-image: linear-gradient(rgba(212, 175, 55, 0.5), rgba(0, 0, 0, 0.5)), url(img/contact-bk.jpg);">
         <div class="container my-5">
             <div class="row justify-content-between">
-                <div class="col-md-6 text-white">
+                <div class="col-md-12 text-white align-self-center text-center">
                     <h2 class="font-weight-bold">Contact Us</h2>
                     <p class="my-4">
-                        Te iisque labitur eos, nec sale argumentum scribentur,
-                        <br> augue disputando in vim. Erat fugit sit at, ius lorem.
+                        Have a question?
+                        <br> Feel free to reach out!
                     </p>
                     <ul class="list-unstyled">
-                        <li>Email : company_email@com</li>
-                        <li>Phone : 361-688-5824</li>
-                        <li>Address : 4826 White Avenue, Corpus Christi, Texas</li>
+                        <li>General : info@com</li>
+                        <li>Privacy : privacy@com</li>
                     </ul>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" style="display: none;">
                     <form>
                     	<div class="row">
 	                        <div class="form-group col-md-6">
