Enhance style and add main banner icon

--- a/index.html
+++ b/index.html
@@ -31,23 +31,31 @@
                     </div>
                 </div>
             </header>
-            <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 font-weight-bold my-5">
-            	Coupoint<br>
-            </h1>
-            <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
-                Coupoint helps businesses better connect with their customers.
-                <br> Try now to unlock more sales and customer satisfaction!
-            </p>
-            <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
-                class="btn my-4 font-weight-bold atlas-cta cta-gold">Download Play Store</a>
-            <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
-                class="btn my-4 font-weight-bold atlas-cta cta-gold">Downlaod App Store</a>
-            <br>
-            <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
-                Not ready to download?
-            </p>
-            <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
-                class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
+            <div class="row justify-content-between">
+                <div class="col-md-8">
+                    <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
+                        class="display-3 font-weight-bold my-5">
+                        Coupoint<br>
+                    </h1>
+                    <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
+                        Coupoint helps businesses better connect with their customers.
+                        <br> Try now to unlock more sales and customer satisfaction!
+                    </p>
+                    <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
+                        class="btn my-4 font-weight-bold atlas-cta cta-gold">Download Play Store</a>
+                    <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
+                        class="btn my-4 font-weight-bold atlas-cta cta-gold">Downlaod App Store</a>
+                    <br>
+                    <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
+                        Not ready to download?
+                    </p>
+                    <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
+                        class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/qr-code.svg" alt="qr-code" style="margin-top: 50%; width:100%;">
+                </div>
+            </div>
         </div>
     </div>
     <!-- three-blcok -->
@@ -110,8 +118,9 @@
         <h2 class="text-center font-weight-bold d-block mb-3">Demo</h2>
         <div class="row text-center">
             <div class="col-md-12">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/0NMSWCcy77s" title="YouTube video player"
+            <iframe src="https://www.youtube.com/embed/0NMSWCcy77s" title="YouTube video player"
                 frameborder="0"
+                style="aspect-ratio: 16 / 9; width: 100%;"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             </div>
