--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
     </div>
     <!-- feature (skew background) -->
-    <div class="jumbotron jumbotron-fluid feature" id="feature-first">
+    <div class="jumbotron jumbotron-fluid feature" id="feature-first" style="overflow-x: hidden;">
         <div class="container my-5">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
@@ -96,7 +96,7 @@
         </div>
     </div>
     <!-- feature (green background) -->
-    <div class="jumbotron jumbotron-fluid feature" id="feature-last">
+    <div class="jumbotron jumbotron-fluid feature" id="feature-last" style="overflow-x: hidden;">
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
