--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width'>
+  <link rel="icon" href="img/favicon.png" sizes="32x32" type="image/png">
   <title>Privacy Policy</title>
   <style>
     body {
