Update contact info

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                         <br> Feel free to reach out!
                     </p>
                     <ul class="list-unstyled">
-                        <li>General : info@com</li>
-                        <li>Privacy : privacy@com</li>
+                        <li>General : business@coupointapp.com</li>
+                        <li>Privacy : business@coupointapp.com</li>
                     </ul>
                 </div>
                 <div class="col-md-6" style="display: none;">
