--- a/privacy.html
+++ b/privacy.html
@@ -144,7 +144,7 @@
   <p><strong>Contact Us</strong></p>
   <p>
     If you have any questions or suggestions about our
-    Privacy Policy, do not hesitate to contact us at coupointapp@gmail.com.
+    Privacy Policy, do not hesitate to contact us at business@coupointapp.com.
   </p>
 </body>
 
