add screenshot images

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     
     <!-- AOS -->
     <link rel="stylesheet" href="css/aos.css">
+
+    <style>
+		.screenshot {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+		}
+		.screenshot img {
+			/* width: 50%; */
+			max-width: 200px;
+			margin: 10px;
+		}
+	</style>
 </head>
 
 <body>
@@ -49,7 +62,7 @@
                     <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
                         Not ready to download?
                     </p>
-                    <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
+                    <a href="https://coupoint.codemagic.app" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
                         class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
                 </div>
                 <div class="col-md-4">
@@ -59,6 +72,26 @@
         </div>
     </div>
     <!-- three-blcok -->
+    <div class="container my-5 py-2">
+        <h2 class="text-center font-weight-bold my-5">Easy to use</h2>
+        <div class="screenshot row">
+            <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true">
+                <img src="img/analytics.jpg" alt="Screenshot 1">
+            </div>
+            <div data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
+                <img src="img/manage_staff.jpg" alt="Screenshot 2">
+            </div>
+            <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true">
+                <img src="img/qr_stamp.jpg" alt="Screenshot 3">
+            </div>
+            <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" data-aos-once="true">
+                <img src="img/reward_edit.jpg" alt="Screenshot 4">
+            </div>
+            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true">
+                <img src="img/store_edit.jpg" alt="Screenshot 5">
+            </div>
+        </div>
+    </div>
     <div class="container my-5 py-2">
         <h2 class="text-center font-weight-bold my-5">At a Glance</h2>
         <div class="row">
@@ -114,7 +147,7 @@
     </div>
 
     <!-- demo video -->
-    <div class="container my-5 py-2" id="demo-video">
+    <!-- <div class="container my-5 py-2" id="demo-video">
         <h2 class="text-center font-weight-bold d-block mb-3">Demo</h2>
         <div class="row text-center">
             <div class="col-md-12">
@@ -125,7 +158,7 @@
                 allowfullscreen></iframe>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- price table -->
     <div class="container my-5 py-2" id="price-table" style="display: none;">
