--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
                         Not ready to download?
                     </p>
-                    <a href="https://coupoint.codemagic.app" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
+                    <a href="https://coupoint.app" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
                         class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
                 </div>
                 <div class="col-md-4">
