--- a/index.html
+++ b/index.html
@@ -66,50 +66,51 @@
                         class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/qr-code.svg" alt="qr-code" style="margin-top: 20%; width:100%;">
+                    <img src="img/qr-code-coupoint.svg" alt="qr-code" style="margin-top: 20%; width:100%;">
                 </div>
             </div>
         </div>
     </div>
     <!-- three-blcok -->
     <div class="container my-5 py-2">
-        <h2 class="text-center font-weight-bold my-5">Easy to use</h2>
+        <h2 class="text-center font-weight-bold my-5">At a glance</h2>
         <div class="screenshot row">
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/analytics.jpg" alt="Screenshot 1">
+                <img src="img/stats_page.jpg" alt="Screenshot 1">
             </div>
             <div data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/manage_staff.jpg" alt="Screenshot 2">
+                <img src="img/staff_page.jpg" alt="Screenshot 2">
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/qr_stamp.jpg" alt="Screenshot 3">
+                <img src="img/qr_page.jpg" alt="Screenshot 3">
             </div>
             <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/reward_edit.jpg" alt="Screenshot 4">
+                <img src="img/reward_page.jpg" alt="Screenshot 4">
             </div>
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/store_edit.jpg" alt="Screenshot 5">
+                <img src="img/posting_page.jpg" alt="Screenshot 5">
             </div>
         </div>
     </div>
     <div class="container my-5 py-2">
-        <h2 class="text-center font-weight-bold my-5">At a Glance</h2>
+        <h2 class="text-center font-weight-bold my-5">Easy to use</h2>
         <div class="row">
             <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-2.jpg" alt="Redeem" class="mx-auto">
-                <h4>Customize</h4>
-                <p>Customize your business reward</p>
-            </div>
-            <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/smart-protect-1.jpg" alt="Generate" class="mx-auto">
                 <h4>Generate</h4>
-                <p>Your business generates a stamp or reward</p>
+                <p>Your business generates a customized stamps and rewards encoded in QR code</p>
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-3.jpg" alt="Scan" class="mx-auto">
                 <h4>Scan</h4>
                 <p>Your customer scans the QR code to get the stamp or redeem the reward</p>
             </div>
+            <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
+                <img src="img/smart-protect-1.jpg" alt="Generate" class="mx-auto">
+                <h4>Advertise</h4>
+                <p>Promote your products or services by sharing captivating posts directly with your customers.</p>
+            </div>
+
         </div>
     </div>
     <!-- feature (skew background) -->
