--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
                 <img src="img/smart-protect-1.jpg" alt="Generate" class="mx-auto">
                 <h4>Advertise</h4>
-                <p>Promote your products or services by sharing captivating posts directly with your customers.</p>
+                <p>Promote your products or services by sharing captivating posts directly with your customers</p>
             </div>
 
         </div>
