update screenshots & copy

--- a/index.html
+++ b/index.html
@@ -51,10 +51,18 @@
                         Coupoint<br>
                     </h1>
                     <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead my-4">
-                        Coupoint helps businesses better connect with their customers.
-                        <br> Try now to unlock more sales and customer satisfaction!
+                        <!-- Coupoint helps businesses better connect with their customers. -->
+
+                        Introducing our 'All-in-one' loyalty card app for your business, a solution your customers will love! 
+                        
+                        <br><br>The best part? No app or sign-up is required to get started! 
+                        <br>Your customers can simply scan the QR code <i class="fa">&#xf029;</i> using their phone's camera, instantly saving your store's loyalty card on their devices. 🚀
+
+                        <br><br> Try it now to unlock greater sales and customer satisfaction!
                     </p>
-                    <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
+                    <a href="#contact" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
+                        class="btn my-4 font-weight-bold atlas-cta cta-gold">Contact us for early access!</a>
+                    <!-- <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
                         class="btn my-4 font-weight-bold atlas-cta cta-gold">Download Play Store</a>
                     <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
                         class="btn my-4 font-weight-bold atlas-cta cta-gold">Downlaod App Store</a>
@@ -63,10 +71,10 @@
                         Not ready to download?
                     </p>
                     <a href="https://coupoint.app" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
-                        class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
+                        class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a> -->
                 </div>
                 <div class="col-md-4">
-                    <img src="img/qr-code-coupoint.svg" alt="qr-code" style="margin-top: 20%; width:100%;">
+                    <img src="img/qr-code.svg" alt="qr-code" style="margin-top: 20%; width:100%;">
                 </div>
             </div>
         </div>
@@ -79,36 +87,38 @@
                 <img src="img/stats_page.jpg" alt="Screenshot 1">
             </div>
             <div data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/staff_page.jpg" alt="Screenshot 2">
+                <img src="img/qr_page.jpg" alt="Screenshot 2">
             </div>
             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/qr_page.jpg" alt="Screenshot 3">
+                <img src="img/reward_page.jpg" alt="Screenshot 3">
             </div>
             <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/reward_page.jpg" alt="Screenshot 4">
-            </div>
-            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true">
-                <img src="img/posting_page.jpg" alt="Screenshot 5">
+                <img src="img/posting_page.jpg" alt="Screenshot 4">
             </div>
         </div>
     </div>
     <div class="container my-5 py-2">
         <h2 class="text-center font-weight-bold my-5">Easy to use</h2>
         <div class="row">
-            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/smart-protect-2.jpg" alt="Redeem" class="mx-auto">
+            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-3 text-center">
+                <img src="img/qr-code.svg" alt="qr-code" class="mx-auto" style="padding: 10%;width: 181px">
                 <h4>Generate</h4>
-                <p>Your business generates a customized stamps and rewards encoded in QR code</p>
+                <p>Your business generates an encrypted, theft-free stamp QR code.                   <i class="fa">&#xf029;</i></p>
             </div>
-            <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
+            <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-3 text-center">
                 <img src="img/smart-protect-3.jpg" alt="Scan" class="mx-auto">
                 <h4>Scan</h4>
-                <p>Your customer scans the QR code to get the stamp or redeem the reward</p>
+                <p>Customers scan the QR code to save your store's loyalty card on their phones 📲 </p>
             </div>
-            <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
+            <div data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000" data-aos-once="true" class="col-md-3 text-center">
                 <img src="img/smart-protect-1.jpg" alt="Generate" class="mx-auto">
+                <h4>Automated "Thank you" message</h4>
+                <p>Customers will receive a "thank you" message from your store after their visit, helping you build a strong relationship with them. 💪</p>
+            </div>
+            <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="600" data-aos-once="true" class="col-md-3 text-center">
+                <img src="img/smart-protect-2.jpg" alt="Redeem" class="mx-auto">
                 <h4>Advertise</h4>
-                <p>Promote your products or services by sharing captivating posts directly with your customers</p>
+                <p>Now your customers are automatically subscribed to your store's special offers and promotions. 🎉 It's a great way to encourage them to revisit. 😎</p>
             </div>
 
         </div>
@@ -118,10 +128,12 @@
         <div class="container my-5">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
-                    <h2 class="font-weight-bold">Easy to onboard</h2>
-                    <p class="my-4">No account? No app? No problem.
-                        <br> Your customers can still scan your store's stamps without having neither an account nor an app.</p>
-                    <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-gold">Try on the Web</a>
+                    <h2 class="font-weight-bold">Simplified onboarding process</h2>
+                    <p class="my-4">No account? No app? No problem!
+                        <br>Customers can effortlessly scan your store's stamps without the need for an account or app.
+                    </p>
+                    <!-- Link to youtube -->
+                    <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-gold">Watch the demo</a>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
                     <img src="img/feature-1.png" alt="Easy to onboard" class="mx-auto d-block">
@@ -134,10 +146,9 @@
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
-                    <h2 class="font-weight-bold">Insightful metrics</h2>
+                    <h2 class="font-weight-bold">Insightful metrics at your fingertips</h2>
                     <p class="my-4">
-                        Coupoint keeps track of how your store's loyalty reward program is doing.
-                        <br> Take advantage of the aggregated metrics on the time period of your choice.
+                        Coupoint diligently tracks the performance of your store's loyalty reward program. Leverage comprehensive aggregated metrics for your preferred time periods.
                     </p>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center flex-md-first">
@@ -230,14 +241,14 @@
         <div class="container my-5">
             <div class="row justify-content-between">
                 <div class="col-md-12 text-white align-self-center text-center">
-                    <h2 class="font-weight-bold">Contact Us</h2>
+                    <h2 id="contact" class="font-weight-bold">Contact Us</h2>
                     <p class="my-4">
-                        Have a question?
-                        <br> Feel free to reach out!
+                        Got a question? Can't wait to try it out?
+                        <br> Feel free to reach out to us for more information!
                     </p>
                     <ul class="list-unstyled">
-                        <li>General : business@coupointapp.com</li>
-                        <li>Privacy : business@coupointapp.com</li>
+                        <li>General Inquiries: business@coupointapp.com</li>
+                        <li>Privacy Concerns: business@coupointapp.com</li>
                     </ul>
                 </div>
                 <div class="col-md-6" style="display: none;">
