--- a/index.html
+++ b/index.html
@@ -130,13 +130,16 @@
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
                     <h2 class="font-weight-bold">Simplified onboarding process</h2>
                     <p class="my-4">No account? No app? No problem!
-                        <br>Customers can effortlessly scan your store's stamps without the need for an account or app.
+                        <br>Customers can effortlessly scan your store's QR without the need for an account or app.
                     </p>
                     <!-- Link to youtube -->
-                    <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-gold">Watch the demo</a>
+                    <a href="https://www.youtube.com/watch?v=3GB4yU3L5Lo" class="btn my-4 font-weight-bold atlas-cta cta-gold">Watch the demo</a>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
-                    <img src="img/feature-1.png" alt="Easy to onboard" class="mx-auto d-block">
+                    <video width="240" height="420" controls>
+                        <source src="img/demo-clip.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
                 </div>
             </div>
         </div>
@@ -151,8 +154,8 @@
                         Coupoint diligently tracks the performance of your store's loyalty reward program. Leverage comprehensive aggregated metrics for your preferred time periods.
                     </p>
                 </div>
-                <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center flex-md-first">
-                    <img src="img/feature-2.png" alt="Insightful metrics" class="mx-auto d-block">
+                <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
+                    <img src="img/feature-1.png" alt="Easy to onboard" class="mx-auto d-block">
                 </div>
             </div>
         </div>
