--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                     </p>
                     <a href="#contact" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
                         class="btn my-4 font-weight-bold atlas-cta cta-gold">Contact us for early access!</a>
+                    <!-- Link to youtube -->
+                    <a href="https://www.youtube.com/watch?v=3GB4yU3L5Lo" class="btn my-4 font-weight-bold atlas-cta cta-gold">Watch the demo</a>                        
                     <!-- <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
                         class="btn my-4 font-weight-bold atlas-cta cta-gold">Download Play Store</a>
                     <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true"
